--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,11 +6,11 @@
     </div>
 
     <menu class="sidebar-menu">
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/">Home</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/about/">About</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/contact/">Contact</a></li>
-      <li class="menu-items"><a class="menu-links" href="https://github.com/artemsheludko/fresh">Github project</a></li>
-      <li class="menu-items"><a class="menu-links" href="https://github.com/artemsheludko/fresh/archive/master.zip">Download</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/">全部文章</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/DOL/">DreamingOutLoud全专赏析</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/WU/">WakingUp全专赏析</a></li>
+      <li class="menu-items"><a class="menu-links" href="https://github.com/AlexJWC/AlexJWC.github.io">Github项目</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/about/">关于-About</a></li>
     </menu>
 
     <div class="sidebar-social">
