--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,12 +6,12 @@
     </div>
 
     <menu class="sidebar-menu">
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/">Home-主页</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/SinglesEA/">Singles单曲合集</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/">全部文章-Articles</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/SinglesEA/">单曲-Singles</a></li>
       <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/DOL/">DreamingOutLoud全专赏析</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/WU/">WakingUp全专赏析</a></li>
-      <li class="menu-items"><a class="menu-links" href="https://github.com/AlexJWC/AlexJWC.github.io">Github项目</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/talk/">音乐杂谈-Talk</a></li>
       <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/about/">关于-About</a></li>
+    
     </menu>
 
     <div class="sidebar-social">
