--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,9 +7,9 @@
 
     <menu class="sidebar-menu">
       <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/">全部文章-Articles</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/SinglesEA/">单曲-Singles</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/DOL/">DreamingOutLoud全专赏析</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/Albums/">专辑-Albums</a></li>
       <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/talk/">音乐杂谈-Talk</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/Movies/">电影杂谈-Movies</a></li>
       <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/about/">关于-About</a></li>
     
     </menu>
