--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
       <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/Albums/">专辑-Albums</a></li>
       <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/talk/">音乐杂谈-Talk</a></li>
       <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/Movies/">电影杂谈-Movies</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/about/">关于-About</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/about/">关于&帮助-About&Help</a></li>
     
     </menu>
 
