--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,10 +6,10 @@
     </div>
 
     <menu class="sidebar-menu">
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/">全部文章-Articles</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/Albums/">专辑-Albums</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/talk/">音乐杂谈-Talk</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/Movies/">电影杂谈-Movies</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/singles/">单曲-Singles</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/albums/">专辑-Albums</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/talk/">音乐故事-MStory</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/subscribe/">订阅-Subscribe</a></li>
       <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/about/">关于&帮助-About&Help</a></li>
     
     </menu>
