--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,12 +6,9 @@
     </div>
 
     <menu class="sidebar-menu">
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/about/">置顶·公告</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/singles/">单曲-Singles</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/albums/">专辑-Albums</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/talk/">音乐故事-MStory</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/subscribe/">订阅-Subscribe</a></li>
-    
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/about/">Summary</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/info/">Details-Singles</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/Payment/">Payment-Albums</a></li>
     </menu>
 
     <!-- <div class="sidebar-social">
