--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,8 +7,8 @@
 
     <menu class="sidebar-menu">
       <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/about/">Summary</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/info/">Details-Singles</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/Payment/">Payment-Albums</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/info/">Details</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/Payment/">Payment</a></li>
     </menu>
 
     <!-- <div class="sidebar-social">
