--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,8 +6,8 @@
     </div>
 
     <menu class="sidebar-menu">
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/about/">Summary</a></li>
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/info/">Details</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/Summary/">Summary</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/Details/">Details</a></li>
       <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/Payment/">Payment</a></li>
     </menu>
 
